Release history for Gentoo-MetaEbuild-Spec-Base

{{$NEXT}}

1.000001 2014-08-15T23:02:42Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace reduced.

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

1.000000 2014-08-10T11:08:49Z
 [00 Major]
 - Significant changes that may affect hand-operated downstreams.

 [01 Version Scheme]
 - Migrated from x.y.z to x.yyyzzz
 - This is the primary reason for the 1.x on the box
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [02 Tooling Change]
 - Moved to ExtUtils::MakeMaker
 - Tookit dependencies for "latest" things now only "recommended"
 - https://questhub.io/realm/perl/quest/5388cc12bbd0be5b2500011f

 [03 Some critical components changed]
 - Path::Class -> Path::Tiny
 - JSON::XS -> JSON::MaybeXS
 - Test::File::ShareDir -> Test::File::ShareDir::Module`

 [Dependencies::Stats]
 - Dependencies changed since 0.1.4, see misc/*.deps* for details
 - build: -1
 - configure: +2 -1 (recommends: +1)
 - develop: +48 -1 (recommends: -1, suggests: +1 ↑1)
 - runtime: +4 ↓1 -3
 - test: +3 -3 (recommends: +3)

 [Misc]
 - Report versions moved to Test::ReportPrereqs
 - Compile test moved to ::PerFile
 - Repo moved to kentnl org

0.1.4 2012-01-04T05:16:00Z
 - Maintenance release.

 [Dependencies::Stats]
 - Dependencies changed since 0.1.3, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: +3
 - test: -1

 [Internals]
 - All namespaces declare AUTHORITY
 - VERSION no longer declared in BEGIN

 [Packaging]
 - migrate Changes format to CPAN::Changes
 - Update Copyright years, formatting and address.
 - Move author/release tests to xt/
 - Repository urls moved to https://
 - x_authority added to metadata.

0.1.3 2011-02-21T13:40:12Z
 - Move tests to use Test::File::ShareDir

 [Dependencies::Stats]