@@ -1,2 +1,3 @@
-.build
-Gentoo-MetaEbuild-Spec-Base-*
+/.build
+/Gentoo-MetaEbuild-Spec-Base-*
+/tmp/
