@@ -1,4 +1,5 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.0.2 at Mon Feb 21 18:57:52 2011
+; vim: syntax=dosini
 name             = Gentoo-MetaEbuild-Spec-Base
 author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
@@ -8,8 +9,7 @@ copyright_holder = Kent Fredric <kentnl@cpan.org>
 ; [Bootstrap::lib]
 
 [@Author::KENTNL]
-git_versions      = 1
-twitter_hash_tags = #perl #cpan
+; twitter_extra_hash_tags =
 normal_form       = numify
 mantissa          = 6
 toolkit           = eumm
