@@ -1,6 +1,19 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.000002
+ [Added / configure recommends]
+ - File::ShareDir::Install 0.10
+
+ [Added / runtime recommends]
+ - Moose 2.000
+ - Path::Tiny 0.058
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001003 → 0.99
 
 1.000001 2014-08-15T23:02:42Z
 
@@ -20,4 +33,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.1.2 2011-02-21T09:38:04Z
 
 0.1.1 2011-02-21T07:52:03Z
-
